force-app/main/default/objects/Student_Milestone__c/Student_Milestone__c.object-meta.xml
<CustomObject>
    <description>[Peoplesoft] - PS_STDNT_CA4R_MLSTN__x</description>
    <label>Student Milestone</label>
    <nameField>
        <label>Student Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>