force-app/main/default/objects/Student_Milestone__c/fields/Acad_Career__c.field-meta.xml
<CustomField>
    <fullName>Acad_Career__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.ACAD_CAREER</description>
    <label>Academic Career</label>
    <length>4</length>
    <type>Text</type>
</CustomField>