force-app/main/default/objects/Student_Milestone__c/fields/Acad_Plan__c.field-meta.xml
<CustomField>
    <fullName>Acad_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PS_STDNT_CAR_MLSTN.ACAD_PLAN</description>
    <label>Academic Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Student_Milestones</relationshipLabel>
    <relationshipName>Student_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>