force-app/main/default/objects/Student_Milestone__c/fields/Acad_Program__c.field-meta.xml
<CustomField>
    <fullName>Acad_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.ACAD_PROGRAM</description>
    <label>Academic Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Student_Milestones</relationshipLabel>
    <relationshipName>Student_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>