force-app/main/default/objects/Student_Milestone__c/fields/Anticipated_Term__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN .ANTICIPATED_TERM</description>
    <label>Term Anticipated</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student_Milestones (Term)</relationshipLabel>
    <relationshipName>Student_Milestones1</relationshipName>
    <type>Lookup</type>
</CustomField>