force-app/main/default/objects/Student_Milestone__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Match with EMPLID for a Student</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student_Milestones</relationshipLabel>
    <relationshipName>Student_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>