force-app/main/default/objects/Student_Milestone__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>DATE_COMPLETED__c</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>