force-app/main/default/objects/Student_Milestone__c/fields/Defense_Building__c.field-meta.xml
<CustomField>
    <fullName>Defense_Building__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft)   PS_BLDG_TBL.DESCR value WHERE PS_ASU_AA_POS_DFNS.BUILDING = PS_BLDG_TBl.BLDG_CD
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Defense Building</label>
    <length>30</length>
    <type>Text</type>
</CustomField>