force-app/main/default/objects/Student_Milestone__c/fields/Defense_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Defense_Date_Time__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_POS_DFNS.ASU_AA_DEFENSE_DT ||  PS_ASU_AA_POS_DFNS.ASU_AA_DEFENSE_TM.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Defense Date Time</label>
    <type>DateTime</type>
</CustomField>