force-app/main/default/objects/Student_Milestone__c/fields/Defense_Room__c.field-meta.xml
<CustomField>
    <fullName>Defense_Room__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_POS_DFNS.ROOM
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Defense Room</label>
    <length>10</length>
    <type>Text</type>
</CustomField>