force-app/main/default/objects/Student_Milestone__c/fields/Defense_Status__c.field-meta.xml
<CustomField>
    <fullName>Defense_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_POS_DFNS.MILESTONE_LEVEL
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Defense Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>