force-app/main/default/objects/Student_Milestone__c/fields/Descr__c.field-meta.xml
<CustomField>
    <fullName>Descr__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.DESCR</description>
    <label>Milestone Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>