force-app/main/default/objects/Student_Milestone__c/fields/Descrformal__c.field-meta.xml
<CustomField>
    <fullName>Descrformal__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.DESCRFORMAL</description>
    <label>Milestone Formal Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>