force-app/main/default/objects/Student_Milestone__c/fields/Effdt__c.field-meta.xml
<CustomField>
    <fullName>Effdt__c</fullName>
    <description>PS_STDNT_CAR_MLSTN.EFFDT</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>