force-app/main/default/objects/Student_Milestone__c/fields/Final_Defense_Results_Status_DtTm__c.field-meta.xml
<CustomField>
    <fullName>Final_Defense_Results_Status_DtTm__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_POSDRS_V.STATUS_DT
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Final Defense Results Status DtTm</label>
    <type>DateTime</type>
</CustomField>