force-app/main/default/objects/Student_Milestone__c/fields/Format_Status__c.field-meta.xml
<CustomField>
    <fullName>Format_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) PS_MLSTN_LVL_TBL.DESCR
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Format Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>