force-app/main/default/objects/Student_Milestone__c/fields/Format_Status_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Format_Status_Last_Updated__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) PS_ASU_AA_POSFMT_V.STATUS_DT
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Format Status Last Updated</label>
    <type>DateTime</type>
</CustomField>