force-app/main/default/objects/Student_Milestone__c/fields/Grad_Format_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Grad_Format_Advisor__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Graduate format advisor name lookup on PS_NAME_CURR_VW.NAME using EMPLID from PS_ASU_AA_POSFMT_V.ADVISOR1_ID
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Format Advisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>