force-app/main/default/objects/Student_Milestone__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.MILESTONE</description>
    <label>Milestone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>