force-app/main/default/objects/Student_Milestone__c/fields/Milestone_Complete__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN .MILESTONE_COMPLETED</description>
    <label>Milestone Completed</label>
    <type>Checkbox</type>
</CustomField>