force-app/main/default/objects/Student_Milestone__c/fields/Milestone_Level__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Level__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.MILESTONE_LEVEL</description>
    <label>Milestone Level</label>
    <length>15</length>
    <type>Text</type>
</CustomField>