force-app/main/default/objects/Student_Milestone__c/fields/Milestone_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Nbr__c</fullName>
    <description>PS_STDNT_CAR_MLSTN.MILESTONE_NBR</description>
    <label>Milestone Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>