force-app/main/default/objects/Student_Milestone__c/fields/Milestone_Title__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Title__c</fullName>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.MILESTONE_TITLE</description>
    <label>Milestone Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>