force-app/main/default/objects/Student_Milestone__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>(PeopleSoft) PS_ASU_SR0189_SPRF.ASU_PRIM_REC_FLG
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>