force-app/main/default/objects/Student_Milestone__c/fields/Term_Required__c.field-meta.xml
<CustomField>
    <fullName>Term_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(PeopleSoft) PS_STDNT_CAR_MLSTN.TERM_REQUIRED</description>
    <label>Term Required</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student_Milestones</relationshipLabel>
    <relationshipName>Student_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>